fix: hover on small buttons

--- a/src/style/components/_header.scss
+++ b/src/style/components/_header.scss
@@ -102,6 +102,11 @@
   color: #bf85fe;
 }
 
+.nav__button--small:hover {
+	background-color: #fff;
+	color: #bf85fe;
+  }
+
 .nav__buttons--group {
   display: flex;
 }
